Fix z-index of control panel

--- a/static/css/ascii_tab.css
+++ b/static/css/ascii_tab.css
@@ -15,6 +15,7 @@ ul {
 }
 
 .controls {
+  z-index: 1;
   position: absolute;
   right: 0;
   top: 0;
